--- a/benchmark_data_drift.ipynb
+++ b/benchmark_data_drift.ipynb
@@ -446,25 +446,25 @@
     "#         _, p_chi, _, _  = chi2_contingency([probs[0],  probs[1]])\n",
     "#         statistic, p_ks = ks_2samp(probs[0], probs[1])\n",
     "    \n",
-    "#     if js > 0.1:\n",
-    "#         drift_js = True\n",
-    "#     else:\n",
-    "#         drift_js = False\n",
+    "    # if js > 0.1:\n",
+    "    #     drift_js = True\n",
+    "    # else:\n",
+    "    #     drift_js = False\n",
     "    \n",
-    "#     if p_ks > 0.05:\n",
-    "#         drift_ks = False\n",
-    "#     else:\n",
-    "#         drift_ks = True\n",
+    "    # if p_ks > 0.05:\n",
+    "    #     drift_ks = False\n",
+    "    # else:\n",
+    "    #     drift_ks = True\n",
     "    \n",
-    "#     if wd > 0.1:\n",
-    "#         drift_ws = True\n",
-    "#     else:\n",
-    "#         drift_ws = False\n",
+    "    # if wd > 0.1:\n",
+    "    #     drift_ws = True\n",
+    "    # else:\n",
+    "    #     drift_ws = False\n",
     "    \n",
-    "#     if p_chi < 0.05:\n",
-    "#         drift_chi2 = True\n",
-    "#     else:\n",
-    "#         drift_chi2 = False\n",
+    "    # if p_chi < 0.05:\n",
+    "    #     drift_chi2 = True\n",
+    "    # else:\n",
+    "    #     drift_chi2 = False\n",
     "    \n",
     "#     benchmark.append({'column': column, 'js': round(js, 3), \"p_ks\": round(p_ks, 3), \"wd\": round(wd, 3), \"chi2\": round(p_chi, 3), 'drift_js': drift_js, \"drift_ks\": drift_ks, \"drift_ws\": drift_ws, \"drift_chi2\": drift_chi2})\n",
     "#     benchmark_df = pd.DataFrame(benchmark)"
@@ -515,7 +515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envs",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -529,12 +529,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "368b3b0deafda5007dce81eddf12bf05decf444d2e20b55795a3ed3b36e34876"
+    "hash": "f4e237613156a812729db94cbdfc39c0a4e9fcecb5495a0beba59c8b76950338"
    }
   }
  },
