add final benchmark

--- a/JS.ipynb
+++ b/JS.ipynb
@@ -121,159 +121,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Num_Cat</th>\n",
-       "      <th>Num_Number</th>\n",
-       "      <th>Right</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>100</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>100</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20</td>\n",
-       "      <td>100</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>20</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>10</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>20</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>20</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1000000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1000000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>20</td>\n",
-       "      <td>1000000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Num_Cat  Num_Number  Right\n",
-       "0         2         100  False\n",
-       "1        10         100  False\n",
-       "2        20         100  False\n",
-       "3         2        1000   True\n",
-       "4        10        1000   True\n",
-       "5        20        1000   True\n",
-       "6         2       10000   True\n",
-       "7        10       10000   True\n",
-       "8        20       10000   True\n",
-       "9         2      100000   True\n",
-       "10       10      100000   True\n",
-       "11       20      100000   True\n",
-       "12        2     1000000   True\n",
-       "13       10     1000000   True\n",
-       "14       20     1000000   True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from detect_drift import DetectDrift\n",
     "\n",
-    "benchmark_prob = []\n",
-    "detection      = DetectDrift(\"js\")\n",
-    "js_benchmark_detail, js_benchmark   = detection.method_drift(dfs)\n",
-    "js_benchmark"
+    "list_methods  = [\"js\", \"wd\", \"ks\"]\n",
+    "all_benchmark = []\n",
+    "\n",
+    "for method in list_methods:\n",
+    "    detection   = DetectDrift(method)\n",
+    "    benchmark_detail, benchmark = detection.method_drift(dfs)\n",
+    "    all_benchmark.append({'Test': method, \"Result\": (benchmark_detail, benchmark)})\n",
+    "\n",
+    "final_benchmark = detection.final_benchmark(all_benchmark)\n"
    ]
   },
   {
@@ -302,321 +162,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Df</th>\n",
-       "      <th>column</th>\n",
-       "      <th>type</th>\n",
-       "      <th>js</th>\n",
-       "      <th>drift_js</th>\n",
-       "      <th>correct</th>\n",
+       "      <th>Method</th>\n",
+       "      <th>Correct_Ratio</th>\n",
+       "      <th>Avg_Time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>100_data_&amp;_2_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.484</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>js</td>\n",
+       "      <td>0.800</td>\n",
+       "      <td>0.000067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>100_data_&amp;_2_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.219</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>wd</td>\n",
+       "      <td>0.067</td>\n",
+       "      <td>0.000129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>100_data_&amp;_10_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.273</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100_data_&amp;_10_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.213</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100_data_&amp;_20_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.355</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>100_data_&amp;_20_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.207</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1000_data_&amp;_2_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.496</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1000_data_&amp;_2_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.061</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1000_data_&amp;_10_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.301</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1000_data_&amp;_10_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.084</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1000_data_&amp;_20_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.282</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1000_data_&amp;_20_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.072</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>10000_data_&amp;_2_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.540</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>10000_data_&amp;_2_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.024</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>10000_data_&amp;_10_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.382</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>10000_data_&amp;_10_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.023</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>10000_data_&amp;_20_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.286</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>10000_data_&amp;_20_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.024</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>100000_data_&amp;_2_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.605</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>100000_data_&amp;_2_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.007</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>100000_data_&amp;_10_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.291</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>100000_data_&amp;_10_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.006</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>100000_data_&amp;_20_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.292</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>100000_data_&amp;_20_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.007</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1000000_data_&amp;_2_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.539</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>1000000_data_&amp;_2_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>1000000_data_&amp;_10_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.338</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1000000_data_&amp;_10_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1000000_data_&amp;_20_cat</td>\n",
-       "      <td>Category</td>\n",
-       "      <td>category</td>\n",
-       "      <td>0.353</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>1000000_data_&amp;_20_cat</td>\n",
-       "      <td>Number</td>\n",
-       "      <td>numeric</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>ks</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000067</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Df    column      type     js  drift_js  correct\n",
-       "0        100_data_&_2_cat  Category  category  0.484      True     True\n",
-       "1        100_data_&_2_cat    Number   numeric  0.219      True    False\n",
-       "2       100_data_&_10_cat  Category  category  0.273      True     True\n",
-       "3       100_data_&_10_cat    Number   numeric  0.213      True    False\n",
-       "4       100_data_&_20_cat  Category  category  0.355      True     True\n",
-       "5       100_data_&_20_cat    Number   numeric  0.207      True    False\n",
-       "6       1000_data_&_2_cat  Category  category  0.496      True     True\n",
-       "7       1000_data_&_2_cat    Number   numeric  0.061     False     True\n",
-       "8      1000_data_&_10_cat  Category  category  0.301      True     True\n",
-       "9      1000_data_&_10_cat    Number   numeric  0.084     False     True\n",
-       "10     1000_data_&_20_cat  Category  category  0.282      True     True\n",
-       "11     1000_data_&_20_cat    Number   numeric  0.072     False     True\n",
-       "12     10000_data_&_2_cat  Category  category  0.540      True     True\n",
-       "13     10000_data_&_2_cat    Number   numeric  0.024     False     True\n",
-       "14    10000_data_&_10_cat  Category  category  0.382      True     True\n",
-       "15    10000_data_&_10_cat    Number   numeric  0.023     False     True\n",
-       "16    10000_data_&_20_cat  Category  category  0.286      True     True\n",
-       "17    10000_data_&_20_cat    Number   numeric  0.024     False     True\n",
-       "18    100000_data_&_2_cat  Category  category  0.605      True     True\n",
-       "19    100000_data_&_2_cat    Number   numeric  0.007     False     True\n",
-       "20   100000_data_&_10_cat  Category  category  0.291      True     True\n",
-       "21   100000_data_&_10_cat    Number   numeric  0.006     False     True\n",
-       "22   100000_data_&_20_cat  Category  category  0.292      True     True\n",
-       "23   100000_data_&_20_cat    Number   numeric  0.007     False     True\n",
-       "24   1000000_data_&_2_cat  Category  category  0.539      True     True\n",
-       "25   1000000_data_&_2_cat    Number   numeric  0.002     False     True\n",
-       "26  1000000_data_&_10_cat  Category  category  0.338      True     True\n",
-       "27  1000000_data_&_10_cat    Number   numeric  0.002     False     True\n",
-       "28  1000000_data_&_20_cat  Category  category  0.353      True     True\n",
-       "29  1000000_data_&_20_cat    Number   numeric  0.002     False     True"
+       "  Method  Correct_Ratio  Avg_Time\n",
+       "0     js          0.800  0.000067\n",
+       "1     wd          0.067  0.000129\n",
+       "2     ks          0.000  0.000067"
       ]
      },
      "execution_count": 4,
@@ -625,7 +203,7 @@
     }
    ],
    "source": [
-    "js_benchmark_detail"
+    "final_benchmark"
    ]
   },
   {
@@ -646,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -712,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.06801522795369157 0.06821307533017451\n"
+      "0.06885368730173061 0.06815397224497668\n"
      ]
     }
    ],
