--- a/JS.ipynb
+++ b/JS.ipynb
@@ -54,11 +54,11 @@
     "\n",
     "data_range_min = 100\n",
     "data_range_max = 1000000\n",
-    "range_col_min  = 2\n",
-    "range_col_max  = 20\n",
+    "range_cat_min  = 2\n",
+    "range_cat_max  = 20\n",
     "\n",
     "# Obtenir la liste des nombres de données et de catégories\n",
-    "dfs = rdg.number_data(data_range_min, data_range_max, range_col_min, range_col_max)\n",
+    "dfs = rdg.number_data(data_range_min, data_range_max, range_cat_min, range_cat_max)\n",
     "\n",
     "print(f\"Nombre de dataframes générés : {len(dfs)}\")\n"
    ]
@@ -125,7 +125,7 @@
    "source": [
     "from detect_drift import DetectDrift\n",
     "\n",
-    "list_methods  = [\"js\", \"wd\", \"ks\"]\n",
+    "list_methods  = [\"js\", \"wd\", \"ks\", \"chi2\"]\n",
     "all_benchmark = []\n",
     "\n",
     "for method in list_methods:\n",
@@ -133,12 +133,12 @@
     "    benchmark_detail, benchmark = detection.method_drift(dfs)\n",
     "    all_benchmark.append({'Test': method, \"Result\": (benchmark_detail, benchmark)})\n",
     "\n",
-    "final_benchmark = detection.final_benchmark(all_benchmark)\n"
+    "final_benchmark = detection.final_benchmark(all_benchmark)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,19 +172,25 @@
        "      <th>0</th>\n",
        "      <td>js</td>\n",
        "      <td>0.800</td>\n",
-       "      <td>0.000067</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>wd</td>\n",
        "      <td>0.067</td>\n",
-       "      <td>0.000129</td>\n",
+       "      <td>0.000199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>ks</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>0.000067</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>chi2</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -192,12 +198,13 @@
       ],
       "text/plain": [
        "  Method  Correct_Ratio  Avg_Time\n",
-       "0     js          0.800  0.000067\n",
-       "1     wd          0.067  0.000129\n",
-       "2     ks          0.000  0.000067"
+       "0     js          0.800  0.000000\n",
+       "1     wd          0.067  0.000199\n",
+       "2     ks          0.000  0.000000\n",
+       "3   chi2          0.000  0.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,6 +312,19 @@
     "moyenne_cat, moyenne_num = analyser.average_method(dfs)\n",
     "print(moyenne_cat, moyenne_num)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
